@@ -92,9 +92,11 @@ The optional 2nd arg SLOTS is a list of slots CLASS will have."
 ;; MEMBER-NAME.
 
 (defun luna-class-find-member (class member-name)
-  (or (stringp member-name)
-      (setq member-name (symbol-name member-name)))
-  (intern-soft member-name (luna-class-obarray class)))
+  (intern-soft
+   (if (stringp member-name)
+       member-name
+     (symbol-name member-name))
+   (luna-class-obarray class)))
 
 
 ;; Return a member (slot or method) of CLASS that has name
@@ -102,9 +104,11 @@ The optional 2nd arg SLOTS is a list of slots CLASS will have."
 ;; CLASS.
 
 (defsubst luna-class-find-or-make-member (class member-name)
-  (or (stringp member-name)
-      (setq member-name (symbol-name member-name)))
-  (intern member-name (luna-class-obarray class)))
+  (intern
+   (if (stringp member-name)
+       member-name
+     (symbol-name member-name))
+   (luna-class-obarray class)))
 
 
 ;; Return the index number of SLOT-NAME in CLASS.
